<resources>
    <string name="app_name">Quiz Time</string>
    <string name="title_choose_category">Choose category</string>
    <string name="action_next">Next</string>
    <string name="settings_title">Settings</string>
    <string name="title_difficulty_pref">Difficulty</string>
    <string name="key_difficulty_pref">key_difficulty_pref</string>
    <string-array name="difficulty_labels">
        <item>Easy</item>
        <item>Medium</item>
    </string-array>
    <string-array name="difficulty_values">
        <item>easy</item>
        <item>medium</item>
    </string-array>
    <string name="difficulty_easy">easy</string>
    <string name="difficulty_medium">medium</string>
    <string name="key_amount_pref">key_amount_pref</string>
    <string name="pref_title_amount">Max questions</string>
    <string name="db_name">quiz-db</string>
    <string name="message_internet_required">Internet connection is required.</string>
    <string name="message_no_data">Currently there is no data available from the server.</string>
    <string name="timer_second_unit">00 : 0%d</string>
    <string name="timer_seconds">00 : %d</string>
    <string name="score_value">Score : %d</string>
    <string name="time_expired">Time\'s up</string>
    <string name="scored_now">You scored : %d</string>
    <string name="scored_best">Current best : %d</string>
    <string name="refresh_description">refresh</string>
    <string name="home_description">home</string>
    <string name="done_all_description">done</string>

</resources>
