<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="40dp"
    android:weightSum="5"
    android:layout_gravity="bottom"
    android:orientation="horizontal"
    android:background="@android:color/black"
    tools:context="com.example.elena.quiztime.fragments.FooterFragment">
        <ImageView
            android:id="@+id/refresh_image"
            android:layout_gravity="center_vertical"
            android:layout_weight="1"
            android:tint="@android:color/white"
            android:src="@drawable/ic_refresh_black_24dp"
            android:layout_width="0dp"
            android:layout_height="30dp"
            android:contentDescription="@string/refresh_description" />

        <ImageView
            android:id="@+id/settings_image"
            android:layout_gravity="center_vertical"
            android:layout_weight="1"
            android:tint="@android:color/white"
            android:src="@drawable/ic_settings_black_24dp"
            android:layout_width="0dp"
            android:layout_height="30dp"
            android:contentDescription="@string/settings_title" />
        <ImageView

            android:id="@+id/home_image"
            android:layout_gravity="center_vertical"
            android:layout_weight="1"
            android:tint="@android:color/white"
            android:src="@drawable/ic_home_black_24dp"
            android:layout_width="0dp"
            android:layout_height="30dp"
            android:contentDescription="@string/home_description" />

        <ImageView
            android:layout_gravity="center_vertical"
            android:layout_weight="1"
            android:id="@+id/image_next"
            android:src="@drawable/next_selector"
            android:layout_width="0dp"
            android:layout_height="30dp"
            android:text="@string/action_next"
            android:contentDescription="@string/action_next" />
        <ImageView
            android:id="@+id/done_all_image"
            android:layout_gravity="center_vertical"
            android:layout_weight="1"
            tools:tint="@android:color/darker_gray"
            android:src="@drawable/done_all_selector"
            android:layout_width="0dp"
            android:layout_height="30dp"
            android:contentDescription="@string/done_all_description" />


</LinearLayout>
